# ChangeLog for sys-apps/preload
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/preload/ChangeLog,v 1.21 2011/02/27 20:48:25 hwoarang Exp $

  27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> preload-0.6.4-r2.ebuild:
  Stable on amd64 wrt bug #356309

  26 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  preload-0.6.4-r2.ebuild:
  x86 stable wrt bug #356309

  23 Feb 2011; Pacho Ramos <pacho@gentoo.org> preload-0.6.4-r2.ebuild:
  Also needs dev-util/pkgconfig.

  23 Feb 2011; Pacho Ramos <pacho@gentoo.org> -preload-0.6.4-r1.ebuild,
  preload-0.6.4-r2.ebuild:
  Set dev-libs/glib as DEPEND and RDEPEND, DEPEND on help2man also (bug
  #355965), use eapi3. Remove old.

  17 Sep 2010; Pacho Ramos <pacho@gentoo.org>
  files/preload-0.6.4-use-help2man-as-usual.patch:
  Fix help2man patch (bug #337771 by Flameeyes).

*preload-0.6.4-r2 (07 Sep 2010)

  07 Sep 2010; Pacho Ramos <pacho@gentoo.org> +preload-0.6.4-r2.ebuild,
  +files/preload-0.6.4.init.in-r1:
  Revision bump to fix race condition (bug #299140 by Ambroz Bizjak) and
  make it POSIX compliant (bug #310511 by Michał Górny), thanks a lot to
  Michał for providing the new init.d script.

  06 Sep 2010; Pacho Ramos <pacho@gentoo.org> preload-0.6.4-r1.ebuild,
  +files/preload-0.6.4-use-help2man-as-usual.patch,
  +files/preload-0.6.4-use-make-dependencies.patch:
  Apply Flameeyes' patches to fix parallel compilation (bug #244966 by
  Jeremy Olexa). Also use 'elog' instead of 'einfo' and drop old 'eerror'
  message. Move to EAPI 2.

  29 Mar 2010; Pacho Ramos <pacho@gentoo.org> files/00-patch-configure.diff:
  00-patch-configure.diff modified to install docs under /usr/share/doc/,
  fixing bug 298191. Thanks to Diego for reporting.

  29 Mar 2010; Pacho Ramos <pacho@gentoo.org> preload-0.6.4-r1.ebuild,
  metadata.xml:
  Taking its maintainership. Make repoman happier quoting some variables.
