@@ -14,13 +14,13 @@ AUX preload-0.6.4.init.in 1144 RMD160 38353810156c7f6d632965b108bdda7866fc6b02 S
 AUX preload-0.6.4.init.in-r1 1506 RMD160 2a4f3c7c26f6abea8fb2293661a6a34bb3c10816 SHA1 84fe67f090a5e8ee5b9f448595ad033887976d0a SHA256 34d7a595a9752166dd441b0da920a144456157f1d0a11eb36ac645aedb2c75d3
 DIST preload-0.6.4.tar.gz 140750 RMD160 93de2090e7d5c21cdb5e74531dab480117f95c36 SHA1 2313a7f9c8713fbc0efaf649b29dbe36ed0b3945 SHA256 d0a558e83cb29a51d9d96736ef39f4b4e55e43a589ad1aec594a048ca22f816b
 EBUILD preload-0.6.4-r1.ebuild 1887 RMD160 d9e498a1549969b4af794a74f47aca7f26262079 SHA1 91c0547e37459e67eef5a2cd972f237273166404 SHA256 ad7d6db7d5cbda4974abc13bd3ffbb70276abe4129264f13e8d7f45d5f6b116a
-EBUILD preload-0.6.4-r2.ebuild 1934 RMD160 d54c5952955216a6eef0d64b9d7aaf41ea9a47c8 SHA1 11c3b266f9c9db19d8df548383ee5c7872e48108 SHA256 02c53bfd8ad133738f5452c1ae788c31ec6e02ee96ca534d3b2f7829aa0671bf
-MISC ChangeLog 5757 RMD160 a7ce5aca1e59628b7bf7bbc323c951179c51482b SHA1 cce9ab570411f438c7d781898a08e4afcab48023 SHA256 54052ea747c219d0f7a5b37d1a7f8082fa64fe3b99adb6316539dc15072acb06
+EBUILD preload-0.6.4-r2.ebuild 1931 RMD160 0dab8a9a83b968035f3d17253adcac60824c271d SHA1 7ca649132a1f29a26045d8a5a2398d8cdafbabff SHA256 71ff3b0cf49897eded31d85cd04a9738f15fbc639c998f48896063afc85f2ea7
+MISC ChangeLog 5872 RMD160 0385cd96ccdada9a75df771278df791a33b6571a SHA1 a39578475cce553dab85ef2fffc63ef030cb53e1 SHA256 5d8e0d5c0be7b0351a99bd5b2f3d87dd401eb5afa02901babb1d8fcd0994a90e
 MISC metadata.xml 479 RMD160 61e251e5835692c8afc673e0fd4c3f78726fd07b SHA1 21394a3ba056110254766a7e03e32aa859c6ced9 SHA256 d7755d46128afe847b586eb8273719ff978dff0a57097f6b8d31a844223759ee
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk6i/fgACgkQX3X2B8XHTokJGQCePUuTZj1j5xsCUT6R9lnQwt4a
-zXkAniIXT9gyDOCc8wZSIk7Izf9mFJtL
-=UsTi
+iEYEARECAAYFAk/AuEUACgkQX3X2B8XHTol8WwCgkaJx3SteRWI2jrCyAU71ZXA8
+jPAAn2CcXPApmK+8Z6ba8k1r58E6GsRp
+=51lt
 -----END PGP SIGNATURE-----
