@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/preload/preload-0.6.4-r2.ebuild,v 1.5 2011/02/27 20:48:25 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/preload/preload-0.6.4-r2.ebuild,v 1.6 2012/05/04 09:17:27 jdhore Exp $
 
 EAPI="3"
 
@@ -19,7 +19,7 @@ WANT_AUTOCONF="2.56"
 
 RDEPEND=">=dev-libs/glib-2.6:2"
 DEPEND="${RDEPEND}
-	dev-util/pkgconfig
+	virtual/pkgconfig
 	sys-apps/help2man"
 
 src_prepare() {
